2003-04-01
- PKG-INFO download now has "obfuscated" email addresses

2003-03-02
- fixed deletion of packages where there were no versions (bugs #907317 and
  #908118)
- list only new releases in RSS and front page, not any old edit (bug
  #907315)

2004-03-01
- add meaningful titles to pages (uses page heading)
- properly unquote version numbers for release editing page (bug #855883)
- allow removal of more than one release at a time
- make "delete whole package" a form button
- made wording of role admin link more helpful
- hide all current releases when a new release is added